Spacing and clear-fixing for Stories page.

--- a/sites/all/themes/gardenwalk/css/local.scss
+++ b/sites/all/themes/gardenwalk/css/local.scss
@@ -566,6 +566,10 @@ form input.form-submit {
 .view-id-gardener_stories.view-display-id-page_2 .views-field-field-images {
   float: right;
   margin-left: 10px;
+  margin-bottom: 23px;
+}
+.view-id-gardener_stories.view-display-id-page_2 .views-row {
+  clear: both;
 }
 
 
